welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	Math.abs(10-a)=z
             ^close10:3: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	Math.abs(10-b)=e
             ^close10:4: error: not found: value z
	if (z<e) {
            ^close10:5: error: not found: value z
		return z
                       ^close10:7: error: not found: value e
		return e
                       ^