welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	Math.abs(10-a)=z
	Math.abs(10-b)=e
	if (z<e) {
		return z
	} else {
		return e
	}
}
